2002-10-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-proc.el (w3m-process-push, w3m-process-start): Fix last
	change.

2002-10-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-rendering-half-dump): To decide whether
	`w3m-treat-image-size' is ignored, use
	`w3m-display-inline-images-p' instead of `w3m-display-graphic-p'.
	Thanks to Mito for his report.
	(w3m-about): Add `witdh' and `height' property to <img> tag.

2002-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-emacs-w3m-icon): Use helvetica-bold to widen image.

2002-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Don't define key bindings for
	`w3m-zoom-out-image' and `w3m-zoom-in-image' when emacs-w3m in
	running in non-graphical display.
	(w3m-info-like-map): Ditto.

2002-10-15  KAMO Tomoyuki  <kamo@ITmanage.co.jp>

	* shimbun/sb-tcup.el (shimbun-tcup-get-group-key): Return
	(hostname . board-id) to support Tripod "personal BBS".
	(shimbun-tcup-make-id): Follow the above change.

2002-10-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
	    Mito <mito@mxa.nes.nec.co.jp>

	* w3m.el (w3m-rendering-half-dump): Ignore `w3m-treat-image-size'
	when emacs-w3m is running in non-graphical display.

2002-10-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-local-dirlist-cgi): Follow the change of
	`w3m-process-start'.
	(w3m-w3m-get-header): Ditto.
	(w3m-w3m-dump-head-source): Ditto.

	* w3m-image.el (w3m-imagick-convert-async-exec): Abolished.
	(w3m-imagick-start): Removed.
	(w3m-imagick-start-convert-buffer): Call `w3m-process-start'
	instead of the above function.

	* w3m-proc.el (w3m-process-push): Accept `command' argument.
	(w3m-process-start): Ditto.

2002-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-dump-head-source): Do not display the help
	message when `w3m-process-with-wait-handler' is evaluated.
	(w3m-make-separator): New function.
	(w3m-about-header): Use the above function.
