@@ -1,3 +1,8 @@
+2002-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-e21.el (w3m-buffer-favicon): Bind local null handler with
+	`w3m-process-with-null-handler' instead of `lexical-let'.
+
 2002-10-16  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m-proc.el (w3m-process-push, w3m-process-start): Fix last
